[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-integration-translator"
version = "0.1.0"
description = "Standalone translation utility for Home Assistant integration locale files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "deep-translator>=1.11.4",
]
license = { file = "LICENSE" }
authors = [
  { name = "Lukas Bandura" },
]
